Renamed to Kickoff Intelligence

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Orb Intelligence",
-  "name": "Orb Intelligence",
+  "short_name": "Kickoff Intelligence",
+  "name": "Kickoff Intelligence",
   "icons": [
     {
       "src": "favicon.ico",
